fixed h1 pseudo class breaking on mobile

--- a/src/sass/_media.scss
+++ b/src/sass/_media.scss
@@ -4,7 +4,7 @@
   }
 
   h1:after {
-    top: -8px;
+    display: none; /*inconcistent on mobile*/
   }
 
   li {
